tests/testcases/errors/BCE0049-1.boo
"""
BCE0049-1.boo(6,5): BCE0022: Cannot convert 'System.String' to 'System.Int32'.
BCE0049-1.boo(7,1): BCE0049: Expression cannot be assigned to.
"""
a = 3
a = "foo"
++a = "bar"
